Cleanup and update most dependencies